--- a/cssIndex.css
+++ b/cssIndex.css
@@ -1,17 +1,38 @@
+body {
+    background: #f2fffe;
+}
+  
 a {
     position: relative;
     display: inline-block;
+    font-weight: bold;
     padding: 0.25em 0.5em;
     text-decoration: none;
-    color: #FFF;
-    background: #fd9535;/*îwåiêF*/
-    border-bottom: solid 2px #d27d00;/*è≠ÇµîZÇ¢ñ⁄ÇÃêFÇ…*/
-    border-radius: 4px;/*äpÇÃä€Ç›*/
-    box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.19);
-    font-weight: bold;
-  }
+    border-bottom: solid 3px #FF992E;
+    border-left: solid 3px #FF992E;
+    color: #FF992E;
+    transition: .4s;
+}
   
-  a:active {
-    border-bottom: solid 2px #fd9535;
-    box-shadow: 0 0 2px rgba(0, 0, 0, 0.30);
-  }
+a:hover {
+    padding-left: 0.7em;
+    padding-right: 0.3em;
+}
+
+table {
+    width: 100%;
+    text-align: center;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+table th {
+    padding: 10px;
+    background: #e6fdfb;
+    border: solid 1px #778ca3;
+}
+
+table td {
+    padding: 10px;
+    border: solid 1px #778ca3;
+}
